[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
jeflog = "0.1.0"
postcard = { version = "1.0.8", features = ["alloc", "experimental-derive"] }
pyo3 = { version = "0.21.2", features = ["abi3-py38"], optional = true }
rusqlite = { version = "0.31.0", optional = true }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"


[dev-dependencies]
anyhow = "1.0.86"
postcard = { version = "1.0.8", features = ["alloc"] }
serde_json = "1.0.117"

[features]
sequences = ["dep:pyo3"]